--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,13 @@
 		<optional>true</optional>
 		<scope>provided</scope>
 	</dependency>
+	
+	
+	<dependency>
+		<groupId>org.projectlombok</groupId>
+		<artifactId>lombok</artifactId>
+		<optional>true</optional>
+	</dependency>
 	</dependencies>
 
 	<build>
